# jamba

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  run_eval.slurm  run_training.slurm  train.sh
.github/workflows/: lint.yml  test.yml
src/: cipher_prompt.txt  config.py  data_prep.py  eval.py  jamba_utils.py  model.py  train.py
src/classes/: __init__.py  checkpoint_manager.py  cipher_data_collator.py  config.py  evaluator.py  pretokenized_cipher_dataset.py  trainer.py
test/: conftest.py
test/classes/: test_checkpoint_manager.py  test_cipher_data_collator.py  test_config.py  test_evaluator.py  test_pretokenized_cipher_dataset.py  test_trainer.py
