[project]
name = "jamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "einops>=0.8.2",
    "datasets>=4.6.0",
    "numpy>=2.4.2",
    "pathlib>=1.0.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "causal-conv1d>=1.6.0",
    "mamba-ssm>=2.3.0",
]

[tool.uv.sources]
mamba-ssm = { git = "https://github.com/state-spaces/mamba.git", branch = "main" }
causal-conv1d = { git = "https://github.com/Dao-AILab/causal-conv1d.git", branch = "main" }