[project]
name = "jamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "einops>=0.8.2",
    "datasets>=4.6.0",
    "numpy>=2.4.2",
    "pathlib>=1.0.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "causal-conv1d>=1.6.0",
    "mamba-ssm>=2.3.0",
    "easy-logging-formatter>=0.1.1",
]

[tool.uv.sources]
mamba-ssm = { git = "https://github.com/state-spaces/mamba.git", rev = "f1493ff" } 
causal-conv1d = { git = "https://github.com/Dao-AILab/causal-conv1d.git", rev = "da6dbaa" }

[tool.ruff]
line-length = 140

[tool.ruff.lint]
exclude = ["venv", ".venv", "__pycache__", "build", "dist", ".eggs", "*.egg", ".mypy_cache", ".pytest_cache"]
select = ["E", "F", "W", "C90", "B", "B9", "ANN", "COM", "D", "ERA", "ISC", "N", "Q000", "S", "SIM", "TID251", "UP", "YTT", "T"]
ignore = [
    "W191",  # indentation contains tabs
    "S311",  # Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "D206",  # Docstring should be indented with spaces equal to the surrounding code
    "D100",  # Missing docstring in public module
    "D203",  # incorrect-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "UP035", # Import from `collections.abc`instead: ...
    "ANN401",# Dynamically typed expressions (typing.Any) are disallowed 
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "S101",    # Use of assert detected
    "D",       # All docstring rules
    "ANN",     # All type annotation rules
    "E501",   # Line too long
    "COM812",  # Missing trailing comma in a list or dict
    "ERA001", # Found commented-out code
    "S106",   # Possible hardcoded password
]
[tool.ruff.format]
indent-style = "tab"